--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,16 +1,23 @@
-<?xml version="1.0" encoding="ISO-8859-1"?>
-
-<!DOCTYPE web-app
-PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
-"http://java.sun.com/dtd/web-app_2_3.dtd">
-<web-app>
-    <display-name>Shorty</display-name>
-    <servlet>
-        <servlet-name>shorty</servlet-name>
-        <servlet-class>shorty.ShortyServlet</servlet-class>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>shorty</servlet-name>
-        <url-pattern>/*</url-pattern>
-    </servlet-mapping>
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+  version="2.4">
+  <display-name>Shorty</display-name>
+  <context-param>
+    <param-name>dbDir</param-name>
+    <param-value>shorty_db_dir</param-value>
+  </context-param>
+  <listener>
+    <listener-class>
+      shorty.DBContextListener
+    </listener-class>
+  </listener>
+  <servlet>
+    <servlet-name>shorty</servlet-name>
+    <servlet-class>shorty.ShortyServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>shorty</servlet-name>
+    <url-pattern>/*</url-pattern>
+  </servlet-mapping>
 </web-app>
