--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ lib_managed
 project/boot
 project/build/target
 target
+src/main/webapp/WEB-INF/web.xml.prod
+src/main/webapp/WEB-INF/web.xml
+shorty_db_dir
