--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,9 @@
-#Project properties
-#Mon Sep 21 20:54:20 EDT 2009
+#
+#Mon May 31 11:00:38 EDT 2010
 project.organization=
 project.name=shorty
-sbt.version=0.5.6
 project.version=1.0
 scala.version=2.7.7
+sbt.version=0.7.4
+build.scala.versions=2.7.7
 project.initialize=false
